# mcp-kr-realestate

./: .gitignore  LICENSE  README.md  README_en.md  pyproject.toml
src/mcp_kr_realestate/: __init__.py  config.py  server.py
src/mcp_kr_realestate/apis/: apt_rent.py  apt_trade.py  building_api.py  client.py  ecos_api.py  indutrade.py  kosis_api.py  land_trade.py  molit_api.py  nrg_trade.py  officetel_rent.py  officetel_trade.py  reb_api.py  rh_rent.py  rh_trade.py  seoul_api.py  sh_rent.py  sh_trade.py  smallshop_api.py
src/mcp_kr_realestate/registry/: initialize_registry.py  tool_registry.py
src/mcp_kr_realestate/tools/: analysis_tools.py  building_tools.py  finance_tools.py  market_tools.py  portfolio_tools.py  report_tools.py  risk_tools.py  transaction_tools.py
src/mcp_kr_realestate/utils/: ctx_helper.py  data_processor.py
src/mcp_kr_realestate/utils/cache/: NRG_TRADE_11680_202506.json
src/mcp_kr_realestate/utils/data/: APT_11170_202506.xml  APT_11680_202505.xml  APT_11680_202506.xml  APT_RENT_11680_202506.xml  LAND_41820_202506.xml  NRG_11110_202506.xml  NRG_11170_202506.xml  NRG_11290_202506.xml  NRG_11650_202506.xml  NRG_11680_202501.xml  NRG_11680_202502.xml  NRG_11680_202503.xml  NRG_11680_202504.xml  NRG_11680_202505.xml  NRG_11680_202506.xml  OFFICETEL_11650_202506.xml  OFFICETEL_11680_202506.xml  OFFICETEL_RENT_11680_202506.xml  RH_11680_202506.xml
src/mcp_kr_realestate/utils/utils/cache/: NRG_11680_202506_summary.json
